[gd_scene load_steps=5 format=3 uid="uid://c2vwmtidwd0pk"]

[ext_resource type="Texture2D" uid="uid://cg4iyw4qlann" path="res://icon.svg" id="1_qf30s"]
[ext_resource type="Script" path="res://plane.gd" id="2_06kll"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b4ptf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y6qg6"]
radius = 59.2115

[node name="plane" type="Sprite2D" groups=["player"]]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_qf30s")
script = ExtResource("2_06kll")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(10, 10)
shape = SubResource("CircleShape2D_b4ptf")

[node name="playerBody" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerBody"]
shape = SubResource("CircleShape2D_y6qg6")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="playerBody" to="." method="_on_player_body_body_entered"]
